[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scenary/portal/Green Portal Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/portal.gd" type="Script" id=15]
[ext_resource path="res://scenes/player_detection_zone.tscn" type="PackedScene" id=16]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 60.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "close"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 21, 9, 10, 11, 12, 13 ]
}

[node name="portal" type="Area2D"]
collision_layer = 2
script = ExtResource( 15 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
hframes = 8
vframes = 3

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 16 )]
scale = Vector2( 2, 2 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/close = SubResource( 6 )
anims/idle = SubResource( 4 )
anims/open = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_portal_body_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
